feat: add set test